Style typography hero

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <title>Aloys' portfolio</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Work Sans font link -->
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <!-- Hero section -->
   <header>
     <h1>Hi, I'm <span>aloys</span><br>
       I am a full stack developper</h1>
-    <h2>I create beautiful websites and applications</h2>
+    <h2>I create beautiful looking websites and applications</h2>
     <input type = 'button' value="contact me">
   </header>
   <!-- About section -->
