Make two columns layout in the about me section

--- a/index.html
+++ b/index.html
@@ -19,49 +19,50 @@
   </header>
   <!-- About section -->
   <section id = 'about'>
-    <h3>About me</h3>
-    <!-- Picture me -->
-    <img />
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, at harum eveniet recusandae qui quas alias dicta sint veniam consequuntur, repudiandae dolores obcaecati laborum, vel sapiente illo nulla. Similique, nulla!</p>
-
-    <!-- Skills chart -->
-    <div>
-    <h4>
-      <div>Html 5<span></span></div>
-    </h4>
-    <h4>
-      <div>CSS<span></span></div>
-    </h4>
-    <h4>
-      <div>Javascript<span></span></div>
-    </h4>
-    <h4>
-      <div>Git<span></span></div>
-    </h4>
-    <h4>
-      <div>React<span></span></div>
-    </h4>
-    <h4>
-      <div>Sass<span></span></div>
-    </h4>
-    <h4>
-      <div>Node<span></span></div>
-    </h4>
-    <h4>
-      <div>Express<span></span></div>
-    </h4>
-    <h4>
-      <div>Wordpress<span></span></div>
-    </h4>
-    <h4>
-      <div>Adobe Xd<span></span></div>
-    </h4>
-    <div class="legends">
-      <p>Basics</p>
-      <p>Intermediate</p>
-      <p>Proficient</p>
-      <p>Excellent</p>
+    <div class="about__subsection">
+      <h3>About me</h3>
+      <!-- Picture me -->
+      <img />
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, at harum eveniet recusandae qui quas alias dicta sint veniam consequuntur, repudiandae dolores obcaecati laborum, vel sapiente illo nulla. Similique, nulla!</p>
     </div>
+    <!-- Skills chart -->
+    <div class='about__subsection'>
+      <h4>
+        <div>Html 5<div></div></div>
+      </h4>
+      <h4>
+        <div>CSS<div></div></div>
+      </h4>
+      <h4>
+        <div>Javascript<div></div></div>
+      </h4>
+      <h4>
+        <div>Git<div></div></div>
+      </h4>
+      <h4>
+        <div>React<div></div></div>
+      </h4>
+      <h4>
+        <div>Sass<div></div></div>
+      </h4>
+      <h4>
+        <div>Node<div></div></div>
+      </h4>
+      <h4>
+        <div>Express<div></div></div>
+      </h4>
+      <h4>
+        <div>Wordpress<div></div></div>
+      </h4>
+      <h4>
+        <div>Adobe Xd<div></div></div>
+      </h4>
+      <div class="legends">
+        <p>Basics</p>
+        <p>Intermediate</p>
+        <p>Proficient</p>
+        <p>Excellent</p>
+      </div>
     </div>
   </section>
   <!-- Features section -->
