Style the innerbar skills and starting working on the animation of them

--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
     <!-- Skills chart -->
     <div class='about__subsection'>
       <h4>
-        <div>Html 5<div></div></div>
+        <div>Html 5<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>CSS<div></div></div>
+        <div>CSS<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Javascript<div></div></div>
+        <div>Javascript<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Git<div></div></div>
+        <div>Git<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>React<div></div></div>
+        <div>React<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Sass<div></div></div>
+        <div>Sass<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Node<div></div></div>
+        <div>Node<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Express<div></div></div>
+        <div>Express<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Wordpress<div></div></div>
+        <div>Wordpress<div><div class = 'innerBar'></div></div></div>
       </h4>
       <h4>
-        <div>Adobe Xd<div></div></div>
+        <div>Adobe Xd<div><div class = 'innerBar'></div></div></div>
       </h4>
       <div class="legends">
         <p>Basics</p>
@@ -126,4 +126,5 @@
     <p>Aloys © 2019</p>
   </footer>
 </body>
+<script type="text/javascript" src='./script.js'></script>
 </html>
