Animate inner skills bar based on their level dataset

--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
     <!-- Skills chart -->
     <div class='about__subsection'>
       <h4>
-        <div>Html 5<div><div class = 'innerBar'></div></div></div>
+        <div>Html 5<div><div class = 'innerBar' data-level = '90'></div></div></div>
       </h4>
       <h4>
-        <div>CSS<div><div class = 'innerBar'></div></div></div>
+        <div>CSS<div><div class = 'innerBar' data-level = '75'></div></div></div>
       </h4>
       <h4>
-        <div>Javascript<div><div class = 'innerBar'></div></div></div>
+        <div>Javascript<div><div class = 'innerBar' data-level = '80'></div></div></div>
       </h4>
       <h4>
-        <div>Git<div><div class = 'innerBar'></div></div></div>
+        <div>Git<div><div class = 'innerBar' data-level = '70'></div></div></div>
       </h4>
       <h4>
-        <div>React<div><div class = 'innerBar'></div></div></div>
+        <div>React<div><div class = 'innerBar' data-level = '50'></div></div></div>
       </h4>
       <h4>
-        <div>Sass<div><div class = 'innerBar'></div></div></div>
+        <div>Sass<div><div class = 'innerBar' data-level = '75'></div></div></div>
       </h4>
       <h4>
-        <div>Node<div><div class = 'innerBar'></div></div></div>
+        <div>Node<div><div class = 'innerBar' data-level = '35'></div></div></div>
       </h4>
       <h4>
-        <div>Express<div><div class = 'innerBar'></div></div></div>
+        <div>Express<div><div class = 'innerBar' data-level = '45'></div></div></div>
       </h4>
       <h4>
-        <div>Wordpress<div><div class = 'innerBar'></div></div></div>
+        <div>Wordpress<div><div class = 'innerBar' data-level = '80'></div></div></div>
       </h4>
       <h4>
-        <div>Adobe Xd<div><div class = 'innerBar'></div></div></div>
+        <div>Adobe Xd<div><div class = 'innerBar' data-level = '60'></div></div></div>
       </h4>
       <div class="legends">
         <p>Basics</p>
