Refactor about skills section HTML and CSS using grids and BEM.

--- a/index.html
+++ b/index.html
@@ -26,37 +26,72 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, at harum eveniet recusandae qui quas alias dicta sint veniam consequuntur, repudiandae dolores obcaecati laborum, vel sapiente illo nulla. Similique, nulla!</p>
     </div>
     <!-- Skills chart -->
-    <div class='about__subsection'>
-      <h4>
-        <div>Html 5<div><div class = 'innerBar' data-level = '90'></div></div></div>
-      </h4>
-      <h4>
-        <div>CSS<div><div class = 'innerBar' data-level = '75'></div></div></div>
-      </h4>
-      <h4>
-        <div>Javascript<div><div class = 'innerBar' data-level = '80'></div></div></div>
-      </h4>
-      <h4>
-        <div>Git<div><div class = 'innerBar' data-level = '70'></div></div></div>
-      </h4>
-      <h4>
-        <div>React<div><div class = 'innerBar' data-level = '50'></div></div></div>
-      </h4>
-      <h4>
-        <div>Sass<div><div class = 'innerBar' data-level = '75'></div></div></div>
-      </h4>
-      <h4>
-        <div>Node<div><div class = 'innerBar' data-level = '35'></div></div></div>
-      </h4>
-      <h4>
-        <div>Express<div><div class = 'innerBar' data-level = '45'></div></div></div>
-      </h4>
-      <h4>
-        <div>Wordpress<div><div class = 'innerBar' data-level = '80'></div></div></div>
-      </h4>
-      <h4>
-        <div>Adobe Xd<div><div class = 'innerBar' data-level = '60'></div></div></div>
-      </h4>
+    <div class='about__subsection skills'>
+
+        <div class = "skills__titles">
+          <h4 class = "skills__title">Html 5</h4>
+          <h4 class = "skills__title">CSS</h4>
+          <h4 class = "skills__title">Jasvascript</h4>
+          <h4 class = "skills__title">Git</h4>
+          <h4 class = "skills__title">React</h4>
+          <h4 class = "skills__title">Sass</h4>
+          <h4 class = "skills__title">Node</h4>
+          <h4 class = "skills__title">Express</h4>
+          <h4 class = "skills__title">Wordpress</h4>
+          <h4 class = "skills__title">Adobe XD</h4>
+        </div>
+
+        <div class = "skills__bars">
+          <div class = 'skills__bar'>
+            <span class = 'skills__innerBar' data-level = '90'></span>
+          </div>
+          
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '75'>
+            </span>
+          </div>
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '80'>
+            </span>
+          </div>  
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '75'>
+            </span>
+          </div>
+          
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '50'>
+            </span>
+          </div>
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '75'>
+            </span>
+          </div>
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '35'>
+            </span>
+          </div>
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '45'>
+            </span>
+          </div>
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '80'>
+            </span>
+          </div>
+
+          <div class="skills__bar">
+            <span class = 'skills__innerBar' data-level = '60'>
+            </span>
+          </div>
+        </div>
+
       <div class="legends">
         <p>Basics</p>
         <p>Intermediate</p>
@@ -64,6 +99,7 @@
         <p>Excellent</p>
       </div>
     </div>
+
   </section>
   <!-- Features section -->
   <section id="feature">
