Finish refactoring/styling the skills bar area using grid

--- a/index.html
+++ b/index.html
@@ -91,12 +91,19 @@
             </span>
           </div>
         </div>
+        
+        <!-- Vertical bar showing the percentages -->
+        <div class="skills__barsPercentages">
+          <div class="skills__barsPercentage"></div>
+          <div class="skills__barsPercentage"></div>
+          <div class="skills__barsPercentage"></div>
+        </div>
 
-      <div class="legends">
-        <p>Basics</p>
-        <p>Intermediate</p>
-        <p>Proficient</p>
-        <p>Excellent</p>
+      <div class="skills__legends">
+        <p class = "skills__legend">Basics</p>
+        <p class = "skills__legend">Intermediate</p>
+        <p class = "skills__legend">Proficient</p>
+        <p class = "skills__legend">Excellent</p>
       </div>
     </div>
 
