--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <input type = 'button' value="contact me">
   </header>
   <!-- About section -->
+<main>
   <section id = 'about'>
     <div class="about__subsection">
       <h3>About me</h3>
@@ -161,6 +162,7 @@
       </form>
     </div>
   </section>
+</main>
   <!-- footer -->
   <footer>
     <a href="">link 1</a>
