Added sticky menu, needs icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
     <!-- animate.css link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <!-- font awesome -->
 </head>
 
 <body>
@@ -19,6 +20,16 @@
         <h2>I create beautiful looking websites and applications</h2>
         <input type='button' value="contact me">
     </header>
+
+    <nav class = 'nav'>
+        <span> LOGO </span>
+        <a href="#" class="nav__link">HOME
+        </a>
+        <a href="#about" class="nav__link">ABOUT</a>
+        <a href="#feature" class="nav__link">FEATURES</a>
+        <a href="#work" class="nav__link">PORTOFLIO</a>
+        <a href="#contact" class="nav__link">CONTACT</a>
+    </nav>
 
     <main>
       <!-- About section -->
