--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
     <!-- animate.css link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <!-- font awesome -->
+    <!-- font awesome 5 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js">
 </head>
 
 <body>
@@ -38,13 +39,17 @@
             <div class="about__subsection">
                 <h3>About me</h3>
                 <!-- Picture me -->
-                <img />
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, at harum eveniet recusandae qui quas alias dicta sint veniam consequuntur, repudiandae dolores obcaecati laborum, vel sapiente illo nulla. Similique, nulla!</p>
+                <div class="about__photoWrapper">
+                    <img class="about__photo"/>
+                </div>
+                <p>I am a full stack developer: I develop web applications and website from the front end to the back end, using the MERN stack using the latest technologies!</p>
+                <p>Make sure to check out my previous project below!</p>
+                <p>Make sure to check out my previous project below!</p>
             </div>
             <!-- Skills chart -->
             <div class='about__subsection skills'>
                 <div class="skills__titles">
-                    <h4 class="skills__title">Html 5</h4>
+                    <h4 class="skills__title"><i class="fas fa-camera"></i>Html 5</h4>
                     <h4 class="skills__title">CSS</h4>
                     <h4 class="skills__title">Jasvascript</h4>
                     <h4 class="skills__title">Git</h4>
@@ -111,7 +116,7 @@
             </div>
         </section>
         <!-- Features section -->
-        <section id="feature">
+<!--         <section id="feature">
             <div class="features">
                 <div class="feature">
                     <img class = "feature__icon" src = 'assets/Icon weather-time-10.png'></img>
@@ -129,7 +134,7 @@
                     <p class = "feature__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In consectetur molestiae vero explicabo tempore ad saepe harum soluta doloribus, iusto porro ea? Aperiam aut asperiores ducimus animi velit, ea quasi!</p>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Latest work section-->
         <section id="work">
             <h1>Latest work</h1>
