Minor changes in syntax

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type='button' value="contact me">
     </header>
 
-    <nav class = 'nav'>
+<!--     <nav class = 'nav'>
         <span> LOGO </span>
         <a href="#" class="nav__link">HOME
         </a>
@@ -30,7 +30,7 @@
         <a href="#feature" class="nav__link">FEATURES</a>
         <a href="#work" class="nav__link">PORTOFLIO</a>
         <a href="#contact" class="nav__link">CONTACT</a>
-    </nav>
+    </nav> -->
 
     <main>
       <!-- About section -->
