--- a/src/index.html
+++ b/src/index.html
@@ -222,7 +222,7 @@
         </section>
         <!-- Contact me section -->
         <section id="contact">
-                <div class="flip-card-inner">
+               <!--  <div class="flip-card-inner"> -->
                 <form class = 'contact__form' method='POST' action='/'>
                 <h3 class = 'form__title'>CONTACT</h3>
                 <h4 class = 'form__subtitle'>Have a question or want to work together?</h4>
@@ -238,12 +238,12 @@
                     <p class = 'form__errorMessage'></p>
                     <button class = 'form__btnSend' type="submit" value="send">SEND</button>
                 </form>
-            <div class="contact__backface">
+<!--             <div class="contact__backface">
                 <h1>Message sent!</h1>
                 <h2>I will get back to you ASAP</h2>
                 <p>NB: I have just sent you an email to confirm this, don't forget to check your spam</p>
             </div>
-        </div>
+        </div> -->
             
         </section>
     </main>
