--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,12 @@
                 <a class='cta__btn' href='#work'>See my work</a>
                 <a class='cta__btn cta__btn--secondary' href='#contact'>Contact me</a>
             </div>
+            <div class="scrollDown__wrapper">
+                <a href='#about'><i class="fas fa-chevron-circle-down"></i></a>
+            </div>
         </div>
     </header>
+
     <!--     <nav class = 'nav'>
         <span> LOGO </span>
         <a href="#" class="nav__link">HOME
@@ -34,6 +38,7 @@
         <a href="#work" class="nav__link">PORTOFLIO</a>
         <a href="#contact" class="nav__link">CONTACT</a>
     </nav> -->
+
     <main>
         <!-- About section -->
         <section id='about'>
@@ -61,7 +66,7 @@
                         <h4 class="skills__title">jest</h4>
                         <h4 class="skills__title">sass</h4>
                         <h4 class="skills__title">tailwind</h4>
-                        <h4 class="skills__title">parcel</h4>
+                        <h4 class="skills__title">vue</h4>
                         <h4 class="skills__title">adobe xd</h4>
                     </div>
                     <div class="skills__bars">
@@ -97,7 +102,7 @@
                             </div>
                         </div>
                         <div class="skills__bar">
-                            <div class='skills__innerBar' data-level='80'>
+                            <div class='skills__innerBar' data-level='75'>
                             </div>
                         </div>
                         <div class="skills__bar">
@@ -120,6 +125,8 @@
                 </div>
             </div>
         </section>
+
+
         <!-- Features section -->
         <!--         <section id="feature">
             <div class="features">
@@ -140,18 +147,20 @@
                 </div>
             </div>
         </section> -->
+
+
         <!-- (The great) Divider - brand -->
     <section id = 'divider'>
-        <i class = 'fab fa-adobe hidden'></i>
+        <i class = 'fab fa-adobe sm-hidden'></i>
         <i class = 'fab fa-js-square'></i>
-        <i class = 'fab fa-css3'></i>
-        <i class = 'hidden fab fa-html5'></i>
+        <i class = 'fab fa-css3 md-hidden'></i>
+        <i class = 'fab fa-html5 md-hidden sm-hidden'></i>
         <i class = 'fab fa-node'></i>
         <i class = 'fab fa-sass'></i>
-        <i class = 'hidden fab fa-npm'></i>
-        <i class = 'hidden fab fa-github'></i>
+        <i class = 'fab fa-npm md-hidden sm-hidden '></i>
+        <i class = 'fab fa-github sm-hidden '></i>
         <i class = 'fab fa-react'></i>
-        <i class = 'hidden fab fa-digital-ocean'></i>
+        <i class = 'fab fa-digital-ocean md-hidden sm-hidden '></i>
 
 
     </section>
@@ -170,18 +179,27 @@
                         <p>The website is bundled and built for production using Parcel and served with Nginx + Node + ExpressJS.</p>
                         <p>The contact form is handled with Nodemailer package.</p>
                         <p>The UI design is made by myself, using Adobe XD.</p>
-                        <code><a href = '#'>< See the source code ></a></code>
+                        <div class="project__btnsLink">
+                        <a class = 'project__btnLink--code' href = 'https://github.com/Aloysb/aloys.dev'>Code</a>
+                        </div>
 
                         <button class = "project__btnClose">X</button>
                     </div>
                 </div>
                 <div class="works__project">
-                    <img class = 'project__img' src='assets/project2.png'  alt = 'screenshot of a project made by myself'/>
+                    <img class = 'project__img' src='assets/KYC_vue.png'  alt = 'screenshot of a project made by myself'/>
                     <div class="project__description">
-                        <h2 class ="project__title">Project title</h2>
-                        <h4 class = "project__technology">Technology used</h4>
-                        <p>Content {THIS IS UNDER CONSTRUCTION}</p>
-                        <code><a href = '#'>See the code</a></code>
+                        <h2 class ="project__title">KYC- Admin Panel</h2>
+                        <h4 class = "project__technology">VueJS - Vuetify - API - JWT</h4>
+                        <p>Admin panel built with Vue.js for a customer management service.</p>
+                        <p>We chose Vue JS for its reactivity, performance and the rapidity of development.
+                        This has been built on top of the database API using JWT authentification.</p>
+                        <p>The project has been bootstrap using Vueitfy to create a neat, clean and responsive UI</p>
+                        <q><em>I highly recommend Aloys. He writes clean & fast code, and never had any issues with him. Five stars, I'm planning to hire him again</em></q> - <strong>Andrei</strong>
+                        <div class="project__btnsLink">
+                        <a class = 'project__btnLink--code' href = 'https://github.com/Aloysb/KYC_admin_panel'>Code</a>
+                        <a class = 'project__btnLink' href = 'https://aloysb.github.io/KYC_admin_panel/#/'>Demo</a>
+                        </div>
                         <button class = "project__btnClose">X</button>
                     </div>
                 </div>
@@ -238,6 +256,8 @@
                     <p class = 'form__errorMessage'></p>
                     <button class = 'form__btnSend' type="submit" value="send">SEND</button>
                 </form>
+
+                <!-- Flipping card idea -->
 <!--             <div class="contact__backface">
                 <h1>Message sent!</h1>
                 <h2>I will get back to you ASAP</h2>
@@ -250,9 +270,9 @@
     <!-- footer -->
     <footer>
     <div class = 'footer__links'>
-        <a class = 'footer__link' href="https://github.com/" target='blank'>Github Icon</a>
-        <a class = 'footer__link' href="">link 2</a>
-        <a class = 'footer__link' href="">link 3</a>
+        <a class = 'footer__link' href="https://github.com/" target='blank'><i class='fab fa-github' ></i></a>
+        <a class = 'footer__link' href="https://www.upwork.com/freelancers/~01a719de719bc3053e" target='blank'><img src = './assets/upwork-tile.svg'/ height = '45' width = '45'></a>
+        <a class = 'footer__link' href="https://www.facebook.com/Aloysdev-112243833808300" target='blank'><i class = 'fab fa-facebook' style='color: var(--main-color)'></i></a>
     </div>
         <p class = 'footer__signature'>Aloys © 2019</p>
     </footer>
