--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                     <img class = "project__img" src='assets/project1.png' alt = 'screenshot of a project made by myself' />
                     <div class="project__description">
                         <h2 class= "project__title">Aloys.dev - Portfolio</h2>
-                        <h4 class = "project__technology">HTML5 - CSS - VANILLA JS - BEM - PARCEL - NODE + EXPRESS</h4>
+                        <h4 class = "project__technology">Html5- Css - Vanilla JS - BEM - Parcel - NodeJS + Express</h4>
                         <p>This website has been entirely built on pure CSS and vanilla JS, the foundations of the web development, without any help from framework or library.</p>
                         <p>I firmly believe that strong foundations and knowledge of the core concepts are the heart of any good developper's skillset.</p>
                         <p>The website is bundled and built for production using Parcel and served with Nginx + Node + ExpressJS.</p>
@@ -204,34 +204,50 @@
                     </div>
                 </div>
                 <div class="works__project">
-                    <img class = 'project__img' src='assets/project3.png'  alt = 'screenshot of a project made by myself'/>
+                    <img class = 'project__img' src='assets/frontrx.png'  alt = 'screenshot of a project made by myself'/>
                     <div class="project__description">
-                        <h2 class ="project__title">Project title</h2>
-                        <h4 class = "project__technology">Technology used</h4>
-                        <p>Content {THIS IS UNDER CONSTRUCTION}</p>
-                        <code><a href = '#'>See the code</a></code>
+                        <h2 class ="project__title">FrontRX</h2>
+                        <h4 class = "project__technology">Nuxt - Go - Nginx - Postman - Vuetify - Rest API - Pupeeter + Jest</h4>
+                        <p>Contract work to maintain and develop a full stack application for communication between physician and pharmacists.</p>
+                        <p>This tool allows secured transfer of medical prescriptions, discussions on medical matters and team management.</p>
+                        <p>My role in this project was to develop and maintain the code base, both front and back end, adding features on client requests.</p>
+                        <p>We also implemented a CI/CD environment with testing using Github actions, Jest + Pupeteer and Postman.</p>
+                        <p>The backend is built as a RESTful API using GO.</p>
+                        <p>The front end is built with Nuxt and Vuetify.</p>
+                        <a class = 'project__btnLink' href = 'https://frontrx.com'>Demo</a>
                         <button class = "project__btnClose">X</button>
+                        <p><small>The code cannot be shared for copyright reasons</small></p>
                     </div>
                 </div>
                 <div class="works__project">
-                    <img class = 'project__img' src='assets/project4.png'  alt = 'screenshot of a project made by myself'/>
+                    <img class = 'project__img' src='assets/scivana.png'  alt = 'screenshot of a project made by myself'/>
                     <div class="project__description">
-                        <h2 class ="project__title">Project title</h2>
-                        <h4 class = "project__technology">Technology used</h4>
-                        <p>Content {THIS IS UNDER CONSTRUCTION}</p>
-                        <code><a href = '#'>See the code</a></code>
+                        <h2 class ="project__title">Scivana</h2>
+                        <h4 class = "project__technology">Laraval - SASS - Blade templates - JS - Bootstrap - Vue</h4>
+                        <p>Contract work to help finish the front end for the Scivana corporation</p>
+                        <p>My role was to help the developer to finish the work before the launch of their products</p>
+                        <p>The project is built on Laraval, relying heavily on SASS for the styling</p>
+                        <p>It also includes a few mini Vue components to add interactivity.</p>
+                        <p>The backend, managed and developped by another developer, is built with PHP</p>
+                        <a class = 'project__btnLink' href = 'https://scivana.com'>Demo</a>
                         <button class = "project__btnClose">X</button>
+                        <p><small>The code cannot be shared for copyright reasons</small></p>
                     </div>
                 </div>
                 <div class="works__project">
-                    <img class = 'project__img' src='assets/project5.png'  alt = 'screenshot of a project made by myself'/>
+                    <img class = 'project__img' src='assets/baeza.png'  alt = 'screenshot of a project made by myself'/>
                     <div class='img__overlay'>
                     </div>
                     <div class="project__description">
-                        <h2 class ="project__title">Project title</h2>
-                        <h4 class = "project__technology">Technology used</h4>
-                        <p>Content {THIS IS UNDER CONSTRUCTION}</p>
-                        <code><a href = '#'>See the code</a></code>
+                        <h2 class ="project__title">Baeza Water</h2>
+                        <h4 class = "project__technology">Nuxt - Tailwind - Adobe XD</h4>
+                        <p>A business website for a local company</p>
+                        <p>My role in this project was to design and build the website according to the client specifications</p>
+                        <p>I used Adobe XD to build a maquette of the website.</p>
+                        <p>The original client wanted to use Bootstrap, but we decided to use Nuxt and Tailwind for a faster website and a better user experience.</p>
+                        <a class = 'project__btnLink' href = 'http://rightful-family.surge.sh/'>Demo</a>
+                        <p><small>The website is still under revision</small></p>
+                        <p><small>The code cannot be shared for copyright reasons</small></p>
                         <button class = "project__btnClose">X</button>
                     </div>
                 </div>
