Update links to open to a new page

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
                         <p>The contact form is handled with Nodemailer package.</p>
                         <p>The UI design is made by myself, using Adobe XD.</p>
                         <div class="project__btnsLink">
-                        <a class = 'project__btnLink--code' href = 'https://github.com/Aloysb/aloys.dev'>Code</a>
+                        <a class = 'project__btnLink--code' target="_blank" href = 'https://github.com/Aloysb/aloys.dev'>Code</a>
                         </div>
 
                         <button class = "project__btnClose">X</button>
@@ -197,8 +197,8 @@
                         <p>The project has been bootstrap using Vueitfy to create a neat, clean and responsive UI</p>
                         <q><em>I highly recommend Aloys. He writes clean & fast code, and never had any issues with him. Five stars, I'm planning to hire him again</em></q> - <strong>Andrei</strong>
                         <div class="project__btnsLink">
-                        <a class = 'project__btnLink--code' href = 'https://github.com/Aloysb/KYC_admin_panel'>Code</a>
-                        <a class = 'project__btnLink' href = 'https://aloysb.github.io/KYC_admin_panel/#/'>Demo</a>
+                        <a class = 'project__btnLink--code' target="_blank" href = 'https://github.com/Aloysb/KYC_admin_panel'>Code</a>
+                        <a class = 'project__btnLink' target="_blank" href = 'https://aloysb.github.io/KYC_admin_panel/#/'>Demo</a>
                         </div>
                         <button class = "project__btnClose">X</button>
                     </div>
@@ -214,7 +214,7 @@
                         <p>We also implemented a CI/CD environment with testing using Github actions, Jest + Pupeteer and Postman.</p>
                         <p>The backend is built as a RESTful API using GO.</p>
                         <p>The front end is built with Nuxt and Vuetify.</p>
-                        <a class = 'project__btnLink' href = 'https://frontrx.com'>Demo</a>
+                        <a class = 'project__btnLink' target="_blank" href = 'https://frontrx.com'>Demo</a>
                         <button class = "project__btnClose">X</button>
                         <p><small>The code cannot be shared for copyright reasons</small></p>
                     </div>
@@ -229,7 +229,7 @@
                         <p>The project is built on Laraval, relying heavily on SASS for the styling</p>
                         <p>It also includes a few mini Vue components to add interactivity.</p>
                         <p>The backend, managed and developped by another developer, is built with PHP</p>
-                        <a class = 'project__btnLink' href = 'https://scivana.com'>Demo</a>
+                        <a class = 'project__btnLink' target="_blank" href = 'https://scivana.com'>Demo</a>
                         <button class = "project__btnClose">X</button>
                         <p><small>The code cannot be shared for copyright reasons</small></p>
                     </div>
@@ -245,7 +245,7 @@
                         <p>My role in this project was to design and build the website according to the client specifications</p>
                         <p>I used Adobe XD to build a maquette of the website.</p>
                         <p>The original client wanted to use Bootstrap, but we decided to use Nuxt and Tailwind for a faster website and a better user experience.</p>
-                        <a class = 'project__btnLink' href = 'http://rightful-family.surge.sh/'>Demo</a>
+                        <a class = 'project__btnLink' target="_blank" href = 'http://rightful-family.surge.sh/'>Demo</a>
                         <p><small>The website is still under revision</small></p>
                         <p><small>The code cannot be shared for copyright reasons</small></p>
                         <button class = "project__btnClose">X</button>
